# learn_cpp

./: .gitignore
a1_hello_world/: README.md  build.sh  hello_world
a2_measurement/: CMakeLists.txt  README.md  build.sh  measurement  measurement.cpp  measurement_utils.cppm
a3_integer_matrix/: CMakeLists.txt  README.md  integer_matrix.cpp  integer_matrix.h  main.cpp  output.txt
a4_generic_matrix/: CMakeLists.txt  README.md  main.cpp  output.txt
a4_generic_matrix/include/: matrix.h  matrix.tpp
a4_generic_matrix/lib/: chess.cppm  integer_matrix.cpp  matrix.cpp
a5_list_vs_vector/: CMakeLists.txt  README.md  main.cpp  python_plotter.py  python_plotter_large.py
a5_list_vs_vector/include/: utils.h
a5_list_vs_vector/lib/: utils.cpp
a5_list_vs_vector/output_data/: list_benchmark.csv  list_benchmark_large.csv  list_benchmark_no_optimizations.csv  set_benchmark.csv  set_benchmark_large.csv  set_benchmark_no_optimizations.csv  vector_benchmark.csv  vector_benchmark_large.csv  vector_benchmark_no_optimizations.csv
a6_concurrency/: main.cpp  python_plotter.py  run.sh
a6_concurrency/include/: find_all.hpp
a6_concurrency/lib/: find_all.cpp
a6_concurrency/output_data/: results_serial_vs_parallel.csv  results_thread_scaling_large.csv  results_thread_scaling_small.csv
hello_world/: README.md  hello_world  hello_world.cpp
modules_demo/: CMakeLists.txt  a.cppm  build.sh  main.cpp
